# mac-util-mountaineer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Mountaineer-TestPlan.md  PROMPT_plan.md  progress.txt  roadmap.md  v2-spec.md
.beads/: issues.jsonl
.planning/: decisions-001.md  reqs-001.md
crates/mountaineer/: Cargo.toml
crates/mountaineer/src/: app_state.rs  cli.rs  config.rs  dialogs.rs  discovery.rs  engine.rs  gui.rs  launchd.rs  logging.rs  main.rs  tray.rs  watcher.rs  wol.rs
crates/mountaineer/src/mount/: manager.rs  mod.rs  smb.rs
crates/mountaineer/src/network/: interface.rs  mod.rs  monitor.rs
scripts/: bundle-macos.sh
specs/: 01-design-principles.md  02-config-and-state.md  03-failover.md  04-tb-recovery.md  05-stable-paths.md  06-favorites.md  07-aliases.md  08-bulk-operations.md  09-share-status.md  10-cli-interface.md  11-background-monitoring.md  12-launchd-integration.md  13-logging-and-diagnostics.md  14-tray-tb-recovery.md  15-tray-favorites.md  16-tray-aliases.md  17-tray-bulk-operations.md  18-tray-status-display.md  19-tray-quick-actions.md
