[workspace]
members = ["crates/mountaineer"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
system-configuration = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nix = { version = "0.30", features = ["net"] }
core-foundation = "0.9"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["runtime_shaders"] }
tray-icon = "0.19"
