[package]
name = "mountaineer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mountaineer"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_component.workspace = true
gpui_component_assets.workspace = true
tray-icon.workspace = true
system-configuration.workspace = true
mdns-sd.workspace = true
security-framework.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
uuid.workspace = true
clap.workspace = true
anyhow.workspace = true
nix.workspace = true
core-foundation.workspace = true
