[package]
name = "mountaineer"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "mountaineer"
path = "src/main.rs"

[dependencies]
system-configuration.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
clap.workspace = true
anyhow.workspace = true
nix.workspace = true
core-foundation.workspace = true
chrono = { version = "0.4", features = ["serde"] }
